<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/frame_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/widget_spacing"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_spacing"
            android:text="@string/label_r" />

        <SeekBar
            android:id="@+id/seek_red"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progressBackgroundTint="@color/red"
            android:progressTint="@color/red"
            android:thumbTint="@color/red"
            tools:progress="145" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/widget_spacing"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_spacing"
            android:text="@string/label_g" />

        <SeekBar
            android:id="@+id/seek_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progressBackgroundTint="@color/green"
            android:progressTint="@color/green"
            android:thumbTint="@color/green"
            tools:progress="55" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/widget_spacing"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/label_spacing"
            android:text="@string/label_b" />

        <SeekBar
            android:id="@+id/seek_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="255"
            android:progressBackgroundTint="@color/blue"
            android:progressTint="@color/blue"
            android:thumbTint="@color/blue"
            tools:progress="215" />

    </LinearLayout>

</LinearLayout>
